@@ -66,7 +66,7 @@ public final class TyrusFX implements ITest, Runnable {
         boolean notify = true;
         try (var ctx = Fn.activate(p)) {
             if (inst == null) {
-                inst = m.getDeclaringClass().newInstance();
+                inst = m.getDeclaringClass().getConstructor().newInstance();
             }
             result = m.invoke(inst);
             if (result == null) {
